# terris

./: AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli_e2e.rs
