[package]
name = "terris"
version = "1.0.2"
edition = "2024"
description = "A simple git worktree manager."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mfornet/terris"
homepage = "https://github.com/mfornet/terris"
keywords = ["git", "worktree", "cli", "developer-tools", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
